AG-7720 - Fix nav items right text alignment issue, refactor mobile breakpoint

--- a/grid-packages/ag-grid-docs/documentation/src/components/HeaderNav.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/components/HeaderNav.module.scss
@@ -1,3 +1,5 @@
+$mobile-header-breakpoint: 768px;
+
 .header-nav {
     composes: navbar navbar-expand-md navbar-dark px-0 py-0 from global;
     margin-left: auto;
@@ -19,7 +21,7 @@
         border: none;
         background-color: transparent;
 
-        @media screen and (min-width: 768px) {
+        @media screen and (min-width: $mobile-header-breakpoint) {
             display: none;
         }
     }
@@ -31,6 +33,10 @@
 
     &__navbar {
         composes: navbar-nav from global;
+
+        @media screen and (min-width: $mobile-header-breakpoint) {
+            margin-right: -18px;
+        }
     }
 
     &__link {
@@ -52,7 +58,7 @@
             }
         }
 
-        @media screen and (min-width: 768px) {
+        @media screen and (min-width: $mobile-header-breakpoint) {
             a::after {
                 content: '';
                 position: absolute;
